@@ -5,7 +5,7 @@ from zope.interface import implements, classProvides
 from zope.schema.interfaces import ISource, IContextSourceBinder, IVocabularyFactory
 from zope.schema.vocabulary import SimpleTerm, SimpleVocabulary
 
-from zope.app.form.browser.interfaces import ISourceQueryView
+from zope.formlib.interfaces import ISourceQueryView
 
 from Products.CMFCore.utils import getToolByName
 from Products.CMFPlone.utils import safe_unicode
