@@ -35,12 +35,12 @@ setup(name='plone.app.vocabularies',
         'setuptools',
         'zope.browser',
         'zope.component',
+        'zope.formlib',
         'zope.i18n',
         'zope.i18nmessageid',
         'zope.interface',
         'zope.schema',
         'zope.site',
-        'zope.app.form',
         'Acquisition',
         'Products.CMFCore',
         'Zope2',
